导出整合包时也去掉重复的 insert，不再把坏 profile 传给下一个人